# septima

./: .gitignore  Cargo.toml  README.md  current_day_septima.odp  meson.build  meson_options.txt
build-aux/: cargo-build.sh  cargo-sources.json  debug-run.sh  io.github.superuser_miguel.Septima.Devel.json  io.github.superuser_miguel.Septima.json  publish-repo.sh
crates/septima-engine/: Cargo.toml
crates/septima-engine/examples/: compress.rs  extract.rs  hash.rs  list.rs
crates/septima-engine/src/: capabilities.rs  command.rs  compress.rs  error.rs  extract.rs  hash.rs  lib.rs  listing.rs  measure.rs  progress.rs  supervise.rs
crates/septima-engine/tests/: real_cancel.rs
crates/septima-engine/tests/fixtures/: list_7z.slt.txt  list_encrypted_7z.slt.txt  list_zip.slt.txt
crates/septima-gtk/: Cargo.toml  build.rs
crates/septima-gtk/src/: archive_view.rs  config.rs.in  create_dialog.rs  entry_object.rs  hash_dialog.rs  main.rs  preset.rs  progress_row.rs  window.rs
data/: io.github.superuser_miguel.Septima.desktop.in.in  io.github.superuser_miguel.Septima.gschema.xml.in  io.github.superuser_miguel.Septima.metainfo.xml.in.in  meson.build  resources.gresource.xml  style.css
data/ui/: archive_view.blp  create_dialog.blp  hash_dialog.blp  progress_row.blp  window.blp
docs/: PERMISSIONS.md  index.html
po/: POTFILES.in
repo-release/: summary  summary.idx
repo-release/refs/heads/app/io.github.superuser_miguel.Septima/x86_64/: master
repo-release/refs/heads/appstream/: x86_64
repo-release/refs/heads/appstream2/: x86_64
repo-release/refs/heads/runtime/io.github.superuser_miguel.Septima.Debug/x86_64/: master
repo-release/summaries/: 169af1168bcc9335d3f1db59503bed9c1fe428bf1a47ce055bfa10e5083d8620-914c18a0a0ca47729d659fbae0f2a22fa7cdca586e12c7723ed2d1afad515033.delta  35e5d0c3ff9391e30d0f585928b02812120cf783bc62a7359226ccc8faf49585-914c18a0a0ca47729d659fbae0f2a22fa7cdca586e12c7723ed2d1afad515033.delta  7e244bb95ce118d7fdc9d8e83663a392df040ffedc8f3da365fbdffba32d6834-914c18a0a0ca47729d659fbae0f2a22fa7cdca586e12c7723ed2d1afad515033.delta  8a7448471e5f0e25f85247f5acc7c9ca860d08847e600190d54f0028cd12d25a-914c18a0a0ca47729d659fbae0f2a22fa7cdca586e12c7723ed2d1afad515033.delta  9b618a6821c8558a3d8324b4d49dfc32d40fa0c103b16ca6250d425ffe00cdcc-914c18a0a0ca47729d659fbae0f2a22fa7cdca586e12c7723ed2d1afad515033.delta
