# Septima — Cargo workspace root.
# Meson drives this build in the real pipeline (Kickoff A3); plain `cargo` works
# for the engine crate and, once gtk4-devel is present, for the app crate (A2).

[workspace]
resolver = "2"
members = [
    "crates/septima-engine",
    "crates/septima-gtk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "GPL-3.0-or-later"
repository = "https://github.com/superuser-miguel/septima"
authors = ["Miguel Almanzar <xmm.user@gmail.com>"]

[workspace.dependencies]
# Internal crates
septima-engine = { path = "crates/septima-engine" }

# GTK stack lives in septima-gtk/Cargo.toml (wired in Task A2). Host `cargo run`
# needs gtk4-devel + libadwaita-devel (Fedora); otherwise build inside the GNOME
# Flatpak SDK. ashpd (portals) is added in Work Area C, where it is first used.

[profile.release]
lto = "thin"
