[package]
name = "septima-gtk"
description = "GTK4 / libadwaita frontend for 7-Zip ZS (Septima)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "septima"

[[bin]]
name = "septima"
path = "src/main.rs"

[dependencies]
adw = { version = "0.9.2", package = "libadwaita", features = ["v1_5"] }
async-channel = "2.5.0"
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
gtk = { version = "0.11.4", package = "gtk4", features = ["v4_10"] }
septima-engine = { workspace = true }
# ashpd (XDG portals) is added in Work Area C, where it is first used — kept out
# until then to avoid a dead dependency.

[build-dependencies]
# (build.rs shells out to blueprint-compiler + glib-compile-resources directly.)
